[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-watch = "8.1.2"
rocket = {version = "0.5.0-rc.2", features = ["json"]}
dotenv = "0.15.0"
jwt-simple = "0.11.2"
serde = "1.0.147"
rand = "0.8.5"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"]